updated main page

--- a/index.html
+++ b/index.html
@@ -34,49 +34,74 @@
         <div class="canvas">
             <div class="projects-container">
 
-                <!-- card 1 -->
-                <div class="project-card">
+
+              <!-- card -->
+              <div class="project-card">
+                <div class="project-snapshot">
+                  <img src="project_Snapshot/keyboard-check.png" alt="Project Snapshot">
+                </div>
+                <div class="project-info">
+                  <h2><a href="keyboard_check/index.html" class="project-link" target="_blank" rel="noopener noreferrer">key Check</a></h2>
+                  <p>Test every key</p>
+                </div>
+              </div>
+
+
+              <!-- card -->
+              <div class="project-card">
+                <div class="project-snapshot">
+                  <img src="project_Snapshot/infinity-color.png" alt="Project Snapshot">
+                </div>
+                <div class="project-info">
+                  <h2><a href="Display_Test/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Infinity Color</a></h2>
+                  <p>Never ending colors.....</p>
+                </div>
+              </div>
+
+
+              <!-- card 1 -->
+              <div class="project-card">
+                <div class="project-snapshot">
+                  <img src="project_Snapshot/color_changer.png" alt="Project Snapshot">
+                </div>
+                <div class="project-info">
+                  <h2><a href="colorChanger/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Color Changer</a></h2>
+                  <p>Test vibrant colors.</p>
+                </div>
+              </div>
+
+              <!-- card 2 -->
+              <div class="project-card">
                   <div class="project-snapshot">
-                    <img src="project_Snapshot/color_changer.png" alt="Project Snapshot">
+                    <img src="project_Snapshot/bmi_calculator.png" alt="Project Snapshot">
                   </div>
                   <div class="project-info">
-                    <h2><a href="colorChanger/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Color Changer</a></h2>
-                    <p>Test vibrant colors.</p>
+                    <h2><a href="BMI_Calculator/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Bmi CalCulator</a></h2>
+                    <p>Calculate your Bmi.</p>
                   </div>
-                </div>
+              </div>
 
-                <!-- card 2 -->
-                <div class="project-card">
-                    <div class="project-snapshot">
-                      <img src="project_Snapshot/bmi_calculator.png" alt="Project Snapshot">
-                    </div>
-                    <div class="project-info">
-                      <h2><a href="BMI_Calculator/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Bmi CalCulator</a></h2>
-                      <p>Calculate your Bmi.</p>
-                    </div>
-                </div>
+              <!-- card 3 -->
+              <div class="project-card">
+                  <div class="project-snapshot">
+                    <img src="project_Snapshot/Ticker_clock.png" alt="Project Snapshot">
+                  </div>
+                  <div class="project-info">
+                    <h2><a href="Clock/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Ticker</a></h2>
+                    <p>Time is money, so I built a clock.</p>
+                  </div>
+              </div>
 
-                <!-- card 3 -->
-                <div class="project-card">
-                    <div class="project-snapshot">
-                      <img src="project_Snapshot/Ticker_clock.png" alt="Project Snapshot">
-                    </div>
-                    <div class="project-info">
-                      <h2><a href="Clock/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Ticker</a></h2>
-                      <p>Time is money, so I built a clock.</p>
-                    </div>
-                </div>
-
-                <!-- card 4 -->
-                <div class="project-card">
-                    <div class="project-snapshot">
-                      <img src="project_Snapshot/Number_Guess.png" alt="Project Snapshot">
-                    </div>
-                    <div class="project-info">
-                      <h2><a href="guess_number/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Guess Number</a></h2>
-                      <p>Try and guess the number.</p>
-                    </div>
-                </div>
+              <!-- card 4 -->
+              <div class="project-card">
+                  <div class="project-snapshot">
+                    <img src="project_Snapshot/Number_Guess.png" alt="Project Snapshot">
+                  </div>
+                  <div class="project-info">
+                    <h2><a href="guess_number/index.html" class="project-link" target="_blank" rel="noopener noreferrer">Guess Number</a></h2>
+                    <p>Try and guess the number.</p>
+                  </div>
+              </div>
 
             </div>
               
